@@ -20,9 +20,12 @@
 
   <ul id="${oid}-orderable">
 
-    <div tal:repeat="tup subfields"
-         tal:replace="structure field.render_template(
-                       item_tmpl, field=tup[1], cstruct=tup[0], parent=field)"/>
+    <!--! subfields is a tuple for bw compat with 3rdparty templates;
+          we ignore the first element (the cstruct) because it's already
+          attached to the field -->
+    <div tal:define="subfields [ x[1] for x in subfields ]"
+         tal:repeat="subfield subfields"
+         tal:replace="structure subfield.render_template(item_tmpl, parent=field)"/>
 
     <span class="deformInsertBefore" 
           tal:attributes="min_len min_len; 
